Fix z-index

--- a/frontend/frontoffice/src/pages/Login/login.module.css
+++ b/frontend/frontoffice/src/pages/Login/login.module.css
@@ -26,4 +26,5 @@
     border-radius: 1rem;
     padding: 0.5rem;
     color: white;
+    z-index: 2;
 }
